standalone/yaml/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
      - DASHBOARD_HOST
    secretName: dashboard-tls
  rules:
  - host: DASHBOARD_HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
